--- a/layouts/partials/result.pug
+++ b/layouts/partials/result.pug
@@ -10,6 +10,7 @@
             i.fa.fa-repeat
             |  Reload
       .portlet-body
+        canvas#memChart(width='400', height='400')
       #hc_mem(style='min-width: 310px; height: 400px; margin: 0 auto')
       
 
