cleaning solution before change

--- a/layouts/partials/result.pug
+++ b/layouts/partials/result.pug
@@ -10,7 +10,17 @@
             i.fa.fa-repeat
             |  Reload
       .portlet-body
-        canvas#memChart(width='400', height='400')
+        canvas#memChart(width='400', height='300')
+      .portlet-body
+        canvas#nsChart(width='400', height='300')
+      .portlet-body
+        canvas#osChart(width='400', height='300')
+      .portlet-body
+        canvas#csChart(width='400', height='300')
+      .portlet-body
+        canvas#losChart(width='400', height='300')
+      .portlet-body
+        canvas#asChart(width='400', height='300')
       #hc_mem(style='min-width: 310px; height: 400px; margin: 0 auto')
       
 
